turin_tcp/log/build_2024-04-11_17-16-52/turin_tcp/stderr.log
  File "/home/rui/ros2_ws/src/turin_tcp/install/turin_tcp/lib/python3.10/site-packages/turin_tcp/tcp_client_node.py", line 38
    rclpy.init(args=args, 8527)
                              ^
SyntaxError: positional argument follows keyword argument

